--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chenyong.android_demo">
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".DemoApp"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.PropertyAnimationActivity" />
         <activity android:name=".activity.CustomViewActivity" />
         <activity android:name=".activity.ScrollerActivity" />
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/title_activity_main2"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.DeviceActivity"/>
+        <activity android:name=".activity.GreenDaoActivity"/>
     </application>
 
 </manifest>
