--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,12 @@ android {
         enabled true
     }
     sourceSets {
-        main.java.srcDirs += "src/main/kotlin"
+        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+    }
+    kapt {
+        generateStubs = true
     }
 }
 
@@ -50,11 +55,11 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'org.greenrobot:greendao:3.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    kapt 'com.android.databinding:compiler:2.2.0'
 }
