begin junit test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:name=".DemoApp"
@@ -28,8 +30,8 @@
         </activity>
         <activity android:name=".activity.DeviceActivity"/>
         <activity android:name=".activity.GreenDaoActivity"/>
-        <activity android:name=".activity.HelloKotlinActivity">
-        </activity>
+        <activity android:name=".activity.HelloKotlinActivity"/>
+        <activity android:name=".activity.WebActivity"/>
     </application>
 
 </manifest>
