--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,15 @@ apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 buildscript {
+    //manage the versions of all dependencies
     ext.kotlin_version = '1.0.4'
-
+    ext.databinding_version = '2.2.0'
+    ext.rxandroid_version = '1.2.1'
+    ext.greendao_version = '3.2.0'
+    ext.rxjava_version = '1.1.6'
+    ext.logging_interceptror_version = '3.4.1'
+    ext.retrofit_version = '2.1.0'
+    ext.suppot_version = '24.2.1'
     repositories {
         jcenter()
     }
@@ -51,15 +58,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'org.greenrobot:greendao:3.2.0'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
-    compile 'io.reactivex:rxjava:1.1.6'
-    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile "com.android.support:appcompat-v7:$suppot_version"
+    compile "com.android.support:design:$suppot_version"
+    compile "org.greenrobot:greendao:$greendao_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    kapt 'com.android.databinding:compiler:2.2.0'
+    kapt "com.android.databinding:compiler:$databinding_version"
+    //http retrofit
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+    compile "com.squareup.okhttp3:logging-interceptor:$logging_interceptror_version"
+    //rx
+    compile "io.reactivex:rxandroid:$rxandroid_version"
+    compile "io.reactivex:rxjava:$rxjava_version"
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
 }
