--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ buildscript {
 }
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.example.chenyong.android_demo"
         minSdkVersion 15
@@ -70,7 +70,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:$suppot_version"
     compile "com.android.support:design:$suppot_version"
     compile("org.greenrobot:greendao:$greendao_version")
@@ -84,10 +83,14 @@ dependencies {
     //rx
     compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    compile ('com.jakewharton.rxbinding:rxbinding:1.0.0')
     //dagger
     compile "com.google.dagger:dagger:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     //google guava in databinding
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
+    compile 'com.android.support:support-v4:24.2.1'
+    testCompile 'junit:junit:4.12'
+    compile 'com.google.guava:guava:20.0'
 }
